# binancedata-python

./: .gitignore  README.md  pyproject.toml
binancedata/: main.py
binancedata/config/: __init__.py  conf.json  const.py  instru.json  path.json
binancedata/tools/: download.py  preparation.py  utils.py
