[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "cacaos lengthy", email = "cacaos-lengthy.0y@icloud.com"},
]

classifiers = [
  "Programming Language :: Python :: 3.11.3",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests == 2.31.0",
  "retry == 0.9.2",
  "xmltodict == 0.13.0",
]
description = "Fetch data from Binance."
name = "binancedata"
readme = "README.md"
requires-python = "==3.11.3"
version = "0.0.6"

[project.urls]
"Bug Tracker" = "https://github.com/cacaos-lengthy/binancedata-python/issues"
"Homepage" = "https://github.com/cacaos-lengthy/binancedata-python"
